name:                haskell-euler
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/pappasam/haskell-euler#readme
license:             BSD3
license-file:        LICENSE
author:              Samuel Roeca
maintainer:          samuel.roeca@gmail.com
copyright:           GPLv3
category:            Learning
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , P001
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable haskell-euler-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-euler
  default-language:    Haskell2010

test-suite haskell-euler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-euler
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pappasam/haskell-euler
